--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
-image{
-    width: 100%;
+/* 全局样式 */
+* {
+    box-sizing: border-box; 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-.hero-image{
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* 英雄图片部分 */
+.hero-image {
     background-image: url(A08CC74A-FA84-4C30-B674-45BF01AD96DC_副本.jpeg);
     background-position: center;
     background-repeat: no-repeat;
@@ -9,27 +18,40 @@ image{
     position: relative;
     height: 350px;
 }
-.hero_text{
+.hero_text {
     color: rgb(172, 186, 213);
     background: rgba(255, 255, 255, 0.8);
     position: absolute;
     text-align: center;
-    top: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     font-size: 5rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    padding: 10px;
 }
-.info{
+
+/* 故事简介部分 - 单独的样式，不影响两列布局 */
+.story-info {
     margin: 100px auto;
-    text-align: center;
     max-width: 800px;
     font-size: 18px;
     line-height: 1.6;
-    font-family: 'Agdasima';
+    text-align: justify; /* 使文本两端对齐 */
 }
-.two-column{
+
+/* 两列布局部分 - 确保应用到正确的容器 */
+.two-column {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 2fr 3fr; /* 修正为 1fr 3fr */
     gap: 50px;
- 
+    margin: 40px auto;
+    width: 80%;
+    align-items: center; /* 垂直居中对齐 */
+}
+/* 为 Jonathan 介绍文本单独设置样式 */
+.info-text p {
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: left;
 }
