--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* 全局样式 */
 * {
     box-sizing: border-box; 
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -9,9 +8,8 @@ img {
     display: block;
 }
 
-/* 英雄图片部分 */
 .hero-image {
-    background-image: url(A08CC74A-FA84-4C30-B674-45BF01AD96DC_副本.jpeg);
+    background-image: url(F83061B79F1CD15BBB8E346E34980057\ 2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -19,7 +17,7 @@ img {
     height: 350px;
 }
 .hero_text {
-    color: rgb(172, 186, 213);
+    color: rgb(195, 58, 31);
     background: rgba(255, 255, 255, 0.8);
     position: absolute;
     text-align: center;
@@ -31,25 +29,24 @@ img {
     padding: 10px;
 }
 
-/* 故事简介部分 - 单独的样式，不影响两列布局 */
 .story-info {
     margin: 100px auto;
     max-width: 800px;
     font-size: 18px;
     line-height: 1.6;
-    text-align: justify; /* 使文本两端对齐 */
+    text-align: justify; 
 }
 
-/* 两列布局部分 - 确保应用到正确的容器 */
+
 .two-column {
     display: grid;
-    grid-template-columns: 2fr 3fr; /* 修正为 1fr 3fr */
+    grid-template-columns: 2fr 3fr; 
     gap: 50px;
     margin: 40px auto;
     width: 80%;
-    align-items: center; /* 垂直居中对齐 */
+    align-items: center; 
 }
-/* 为 Jonathan 介绍文本单独设置样式 */
+
 .info-text p {
     font-size: 18px;
     line-height: 1.6;
